fin: :bug: game board overflow over player info fixed

--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -378,17 +378,16 @@ footer {
   flex-flow: column nowrap;
   justify-content: space-between;
   align-items: center;
-
-  padding: 12 px;
+  padding: 12px;
 }
 
 .game-section .game-container {
   flex: 1;
-  align-self: center;
+  align-self: stretch;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 90%;
+  align-items: center;
   gap: 8px;
 }
 
@@ -398,6 +397,7 @@ footer {
 }
 
 .current-number {
+  flex:1;
   width: 100%;
   min-height: 30px;
   font-size: var(--l-font-size);
@@ -407,8 +407,8 @@ footer {
 }
 
 .current-number span {
-  display: inline-block;
-  height: inherit;
+  /* display: inline-block;
+  height: inherit; */
   color: var(--color--tertiary);
   font-weight: var(--primary-font-weight-600);
   text-shadow: 2px 2px 2px var(--color--secondary);
@@ -420,16 +420,18 @@ footer {
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(5, auto);
   gap: 5px;
+  width: 100%;
 }
 
 .game-board__box {
-  width: 100%;
-  height: 100%;
   border-radius: 6%;
   border: 2px solid var(--color--tertiary);
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 10%;
+  width: 100%;
+  aspect-ratio: 1;
 }
 
 /*  players container  */
